infra/terraform/manifests/istio/peer-authentication-frontend.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: frontend-nodeport
  namespace: ${namespace}
spec:
  selector:
    matchLabels:
      app: frontend
  mtls:
    mode: STRICT
  portLevelMtls:
    8080:
      mode: PERMISSIVE
