infra/terraform/manifests/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: dashboard-routes
  namespace: ${namespace}
spec:
  hosts:
    - "*"
  gateways:
    - dashboard-gateway
  http:
    - route:
        - destination:
            host: frontend.${namespace}.svc.cluster.local
            port:
              number: 80
